tests/toylang/neg/001629_mutation.toylang
program a = { while a do sleep if; } .
